--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="style.css" />
 
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mein Portfolio</title>
+    <title>Marcel Richter – Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hi, ich bin Marcel Richter</h1>
-    <p>Ich entwickle coole Projekte in Python und JavaScript.</p>
-
-    <h2>Meine Projekte</h2>
-    <ul>
-      <li>
-        <a href="https://github.com/deinBenutzername/todo-app">To-Do App</a>
-      </li>
-      <li>
-        <a href="https://github.com/deinBenutzername/snake-game">Snake Game</a>
-      </li>
-    </ul>
+    <header>
+      <h1>👋 Hi, ich bin Marcel Richter</h1>
+      <p>
+        Student der Angewandten Informatik an der HTWG Konstanz<br />
+        Vertiefung: Embedded Systems
+      </p>
+    </header>
+    <main>
+      <h2>📂 Meine Projekte</h2>
+      <ul>
+        <li>
+          <a href="https://github.com/Ma161ric/Projekt1">Projekt1</a>
+          <p>Beschreibung des Projekts 1.</p>
+        </li>
+        <li>
+          <a href="https://github.com/Ma161ric/Projekt2">Projekt2</a>
+          <p>Beschreibung des Projekts 2.</p>
+        </li>
+        <li>
+          <a href="https://github.com/Ma161ric/Projekt3">Projekt3</a>
+          <p>Beschreibung des Projekts 3.</p>
+        </li>
+        <!-- Füge weitere Projekte hier hinzu -->
+      </ul>
+    </main>
   </body>
 </html>
