--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
@@ -9,29 +8,44 @@
   </head>
   <body>
     <header>
-      <h1>👋 Hi, ich bin Marcel Richter</h1>
-      <p>
-        Student der Angewandten Informatik an der HTWG Konstanz<br />
-        Vertiefung: Embedded Systems
-      </p>
+      <div class="container">
+        <img
+          src="assets/sunset.gif"
+          alt="Profilbild von Marcel Richter"
+          class="avatar"
+        />
+        <div class="intro">
+          <h1>👋 Hi, ich bin <span class="name">Marcel Richter</span></h1>
+          <p class="studium">
+            Student der Angewandten Informatik<br />an der HTWG Konstanz
+          </p>
+          <p class="focus">🧭 Vertiefung: Embedded Systems</p>
+        </div>
+      </div>
     </header>
+
     <main>
-      <h2>📂 Meine Projekte</h2>
-      <ul>
-        <li>
-          <a href="https://github.com/Ma161ric/Projekt1">Projekt1</a>
-          <p>Beschreibung des Projekts 1.</p>
-        </li>
-        <li>
-          <a href="https://github.com/Ma161ric/Projekt2">Projekt2</a>
-          <p>Beschreibung des Projekts 2.</p>
-        </li>
-        <li>
-          <a href="https://github.com/Ma161ric/Projekt3">Projekt3</a>
-          <p>Beschreibung des Projekts 3.</p>
-        </li>
-        <!-- Füge weitere Projekte hier hinzu -->
-      </ul>
+      <section class="projekte">
+        <h2>📂 Meine Projekte</h2>
+        <div class="grid">
+          <div class="projekt">
+            <h3><a href="https://github.com/Ma161ric/Projekt1">Projekt1</a></h3>
+            <p>Beschreibung des Projekts 1.</p>
+          </div>
+          <div class="projekt">
+            <h3><a href="https://github.com/Ma161ric/Projekt2">Projekt2</a></h3>
+            <p>Beschreibung des Projekts 2.</p>
+          </div>
+          <div class="projekt">
+            <h3><a href="https://github.com/Ma161ric/Projekt3">Projekt3</a></h3>
+            <p>Beschreibung des Projekts 3.</p>
+          </div>
+          <div class="projekt">
+            <h3><a href="https://github.com/Ma161ric/Projekt4">Projekt4</a></h3>
+            <p>Beschreibung des Projekts 4.</p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
