--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <header>
       <div class="container">
         <button id="darkModeToggle">🌗 Dark Mode</button>
-        <img src="assets/colour.jpg" alt="Profilbild" class="avatar" />
+        <img
+          src="assets/profilbild.jpg"
+          srcset="assets/profilbild.jpg 1x, assets/profilbild@2x.jpg 2x"
+          alt="Profilbild"
+          class="avatar"
+        />
         <div class="intro">
           <h1>👋 Hi, ich bin <span class="name">Marcel Richter</span></h1>
           <p class="studium">
