--- a/kontakt.html
+++ b/kontakt.html
@@ -7,14 +7,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <button id="darkModeToggle">🌗 Dark Mode</button>
+
     <main class="kontaktseite">
       <h1>📫 Kontakt aufnehmen</h1>
       <p>
-        Schreib mir eine Nachricht oder erreiche mich direkt über mein
-        Portfolio.
+        Schreib mir gern eine Nachricht an marcel.richter.fn@gmx.de oder
+        erreiche mich direkt über mein Kontaktformular.
       </p>
 
-      <form class="kontakt-formular">
+      <form
+        class="kontakt-formular"
+        action="https://formsubmit.co/marcel.richter.fn@gmx.de"
+        method="POST"
+      >
+        <input type="hidden" name="_captcha" value="false" />
+        <input type="hidden" name="_next" value="danke.html" />
+
         <label for="name">Name</label>
         <input
           type="text"
@@ -49,5 +58,7 @@
         <a href="index.html">🔙 Zurück zur Startseite</a>
       </div>
     </main>
+
+    <script src="script.js"></script>
   </body>
 </html>
