--- a/index.html
+++ b/index.html
@@ -49,22 +49,24 @@
         <!-- Filter -->
         <div class="filter">
           <button data-filter="all">Alle</button>
-          <button data-filter="python">Python</button>
-          <button data-filter="c">C</button>
+          <button data-filter="iot">IoT-Anwendung</button>
+          <button data-filter="embedded_systems_projekt">
+            Embedded Systems Projekt
+          </button>
           <button data-filter="hardware">Hardware</button>
         </div>
 
         <!-- Projekt-Grid -->
         <div class="grid">
-          <div class="projekt" data-tech="python">
-            <h3><a href="#">Python Logger</a></h3>
+          <div class="projekt" data-tech="iot">
+            <h3><a href="#">IoT-Anwendung</a></h3>
             <p>
-              Ein Projekt zur Sensordatenerfassung mit Python und grafischer
-              Ausgabe.
+              Implementierung eines eigenen Smart-Home-Projekts mit
+              Mikrocontrollern und Sensoren.
             </p>
           </div>
-          <div class="projekt" data-tech="c">
-            <h3><a href="#">Interruptgesteuerte Steuerung</a></h3>
+          <div class="projekt" data-tech="embedded_systems_projekt">
+            <h3><a href="#">Embedded Systems Projekt</a></h3>
             <p>Mikrocontrollerprojekt in C mit Echtzeitverhalten.</p>
           </div>
           <div class="projekt" data-tech="hardware">
