--- a/kontakt.html
+++ b/kontakt.html
@@ -12,13 +12,15 @@
     <main class="kontaktseite">
       <h1>📫 Kontakt aufnehmen</h1>
       <p>
-        Schreib mir gern eine Nachricht an marcel.richter.fn@gmx.de oder
-        erreiche mich direkt über mein Kontaktformular.
+        Schreib mir gern eine Nachricht an
+        <a href="mailto:marcel.richter.fn@gmx.de">marcel.richter.fn@gmx.de</a>
+        oder erreiche mich direkt über mein Kontaktformular. Ich freue mich auf
+        deine Nachricht!
       </p>
 
       <form
         class="kontakt-formular"
-        action="https://formsubmit.co/marcel.richter.fn@gmx.de"
+        action="https://formsubmit.co/marcel.richter.fn%40gmx.de"
         method="POST"
       >
         <input type="hidden" name="_captcha" value="false" />
