Update form action next URL in kontakt.html

--- a/kontakt.html
+++ b/kontakt.html
@@ -24,7 +24,8 @@
         method="POST"
       >
         <input type="hidden" name="_captcha" value="false" />
-        <input type="hidden" name="_next" value="danke.html" />
+        <input type="hidden" name="_next" value="https://ma161ric.github.io/Ma161ric/danke.html" />
+
 
         <label for="name">Name</label>
         <input
