--- a/kontakt.html
+++ b/kontakt.html
@@ -19,13 +19,13 @@
       </p>
 
       <form
+        id="kontaktForm"
         class="kontakt-formular"
         action="https://formsubmit.co/marcel.richter.fn%40gmx.de"
         method="POST"
       >
         <input type="hidden" name="_captcha" value="false" />
-        <input type="hidden" name="_next" value="https://ma161ric.github.io/Ma161ric/danke.html" />
-
+        <input type="hidden" name="_subject" value="Neue Nachricht von der Website" />
 
         <label for="name">Name</label>
         <input
@@ -54,7 +54,8 @@
           required
         ></textarea>
 
-        <button type="submit">📨 Nachricht senden</button>
+        <button type="submit" id="submitBtn">📨 Nachricht senden</button>
+        <div id="errorMessage" class="error-message" style="display: none; color: red; margin-top: 10px;"></div>
       </form>
 
       <div class="zurueck-link">
@@ -63,5 +64,46 @@
     </main>
 
     <script src="script.js"></script>
+
+    <script>
+      document.getElementById('kontaktForm').addEventListener('submit', async (e) => {
+        e.preventDefault();
+
+        const form = e.target;
+        const submitBtn = document.getElementById('submitBtn');
+        const errorMessage = document.getElementById('errorMessage');
+
+        // Reset error message
+        errorMessage.style.display = 'none';
+        errorMessage.textContent = '';
+
+        // Disable button during submission
+        submitBtn.disabled = true;
+        submitBtn.textContent = '⏳ Wird gesendet...';
+
+        try {
+          const response = await fetch(form.action, {
+            method: 'POST',
+            body: new FormData(form),
+          });
+
+          if (response.ok) {
+            // Redirect to danke.html on success
+            window.location.href = 'danke.html';
+          } else {
+            throw new Error(`Server error: ${response.status}`);
+          }
+        } catch (error) {
+          // Show error message
+          errorMessage.textContent = '❌ Fehler beim Senden! Bitte versuche es später erneut oder kontaktiere mich direkt.';
+          errorMessage.style.display = 'block';
+          console.error('Form submission error:', error);
+
+          // Re-enable button
+          submitBtn.disabled = false;
+          submitBtn.textContent = '📨 Nachricht senden';
+        }
+      });
+    </script>
   </body>
 </html>
