--- a/danke.html
+++ b/danke.html
@@ -3,27 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Danke – Nachricht gesendet</title>
+    <title>Danke | Marcel Richter</title>
+    <meta
+      name="description"
+      content="Danke Seite. Nachricht wurde gesendet."
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
-    <button id="darkModeToggle">🌗 Dark Mode</button>
+    <button id="darkModeToggle" aria-label="Dark Mode umschalten">
+      🌗 Dark Mode
+    </button>
 
     <main class="kontaktseite">
-      <h1>✅ Danke für deine Nachricht!</h1>
-      <p>
-        Ich habe deine Nachricht erhalten und werde mich bald bei dir melden.
-      </p>
+      <h1>✅ Danke für deine Nachricht</h1>
+      <p>Ich habe deine Nachricht erhalten und melde mich so bald wie möglich.</p>
 
-      <div class="zurueck-link">
-        <a href="index.html">🔙 Zurück zur Startseite</a>
+      <div class="kontakt-links">
+        <a class="link-btn" href="index.html">🏠 Zur Startseite</a>
+        <a class="link-btn" href="kontakt.html">📫 Noch eine Nachricht</a>
+        <a
+          class="link-btn"
+          href="https://www.linkedin.com/in/marcel-ric/"
+          target="_blank"
+          rel="noopener"
+          >💼 LinkedIn</a
+        >
       </div>
     </main>
 
     <footer class="footer">
-      <a href="kontakt.html" class="kontakt-button"
-        >📫 Noch eine Nachricht senden</a
-      >
+      <div class="footer-inner">
+        <a href="kontakt.html" class="kontakt-button">📫 Noch eine Nachricht senden</a>
+      </div>
     </footer>
 
     <script src="script.js"></script>
