--- a/index.html
+++ b/index.html
@@ -3,89 +3,179 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Marcel Richter – Portfolio</title>
+    <title>Marcel Richter | Portfolio</title>
+
+    <meta
+      name="description"
+      content="Portfolio von Marcel Richter. Angewandte Informatik mit Schwerpunkt Embedded Systems. Projekte, Skills, Kontakt und Links."
+    />
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   </head>
+
   <body>
     <header>
       <div class="container">
-        <button id="darkModeToggle">🌗 Dark Mode</button>
-        <img
-          src="assets/profilbild.jpg"
-          srcset="assets/profilbild.jpg 1x, assets/profilbild@2x.jpg 2x"
-          alt="Profilbild"
-          class="avatar"
-        />
-        <div class="intro">
-          <h1>👋 Hi, ich bin <span class="name">Marcel Richter</span></h1>
-          <p class="studium">
-            🎓 Student der Angewandten Informatik<br />an der HTWG Konstanz
-          </p>
-          <p class="focus">Embedded Systems</p>
+        <div class="topbar">
+          <button id="darkModeToggle" aria-label="Dark Mode umschalten">
+            🌗 Dark Mode
+          </button>
+
+          <nav class="quicklinks" aria-label="Schnelllinks">
+            <a
+              class="link-btn"
+              href="https://www.linkedin.com/in/marcel-ric/"
+              target="_blank"
+              rel="noopener"
+              >💼 LinkedIn</a
+            >
+            <a
+              class="link-btn"
+              href="https://Ma161ric.github.io/Ma161ric"
+              target="_blank"
+              rel="noopener"
+              >🌐 Portfolio</a
+            >
+            <a class="link-btn" href="kontakt.html">📫 Kontakt</a>
+          </nav>
+        </div>
+
+        <div class="hero">
+          <img
+            src="assets/profilbild.jpg"
+            srcset="assets/profilbild.jpg 1x, assets/profilbild@2x.jpg 2x"
+            alt="Profilbild von Marcel Richter"
+            class="avatar"
+          />
+
+          <div class="intro">
+            <h1>👋 Hi, ich bin <span class="name">Marcel Richter</span></h1>
+
+            <p class="studium">
+              🎓 Student der Angewandten Informatik<br />an der HTWG Konstanz
+            </p>
+
+            <p class="focus">Schwerpunkt: Embedded Systems</p>
+
+            <p class="tagline">
+              Ich interessiere mich für hardwarenahe Software, zuverlässige
+              Systeme und Kommunikation zwischen Geräten. Hier zeige ich Projekte
+              und Skills, die ich im Studium und in eigenen Arbeiten aufgebaut
+              habe.
+            </p>
+          </div>
         </div>
       </div>
     </header>
 
     <main data-aos="fade-up">
-      <section class="projekte">
-        <section class="skills">
+      <section class="content">
+        <section class="about" id="about">
+          <h2>🧩 Kurzprofil</h2>
+          <ul class="bullets">
+            <li>Embedded Entwicklung mit Fokus auf C und C++</li>
+            <li>Grundlagen digitaler Systeme und Mikroprozessortechnik</li>
+            <li>Sensorik und Peripherie, Interrupts, Timer, Zustandsmaschinen</li>
+            <li>Embedded Linux Grundlagen und Tooling im Alltag</li>
+          </ul>
+        </section>
+
+        <section class="skills" id="skills">
           <h2>🛠️ Skills & Tools</h2>
-          <div class="badges">
+          <div class="badges" aria-label="Skills">
             <span class="badge">C</span>
             <span class="badge">C++</span>
             <span class="badge">Python</span>
-            <span class="badge">VHDL</span>
+            <span class="badge">VHDL (Grundlagen)</span>
             <span class="badge">Embedded Linux</span>
             <span class="badge">Git</span>
             <span class="badge">VS Code</span>
           </div>
+
+          <p class="hint">
+            Hinweis: Ich liste hier nur Dinge, die ich praktisch genutzt habe.
+            Tiefe und Details zeige ich in den Projekten.
+          </p>
         </section>
 
-        <h2>📂 Meine Projekte</h2>
+        <section class="projects" id="projects">
+          <h2>📂 Projekte</h2>
 
-        <!-- Filter -->
-        <div class="filter">
-          <button data-filter="all">Alle</button>
-          <button data-filter="iot">IoT-Anwendung</button>
-          <button data-filter="embedded_systems_projekt">
-            Embedded Systems Projekt
-          </button>
-          <button data-filter="hardware">Hardware</button>
-        </div>
+          <div class="filter" aria-label="Projektfilter">
+            <button data-filter="all" class="active">Alle</button>
+            <button data-filter="iot">IoT</button>
+            <button data-filter="embedded">Embedded</button>
+            <button data-filter="hardware">Hardware</button>
+          </div>
 
-        <!-- Projekt-Grid -->
-        <div class="grid">
-          <div class="projekt" data-tech="iot">
-            <h3><a href="#">IoT-Anwendung</a></h3>
-            <p>
-              Implementierung eines eigenen Smart-Home-Projekts mit
-              Mikrocontrollern und Sensoren.
-            </p>
+          <div class="grid" aria-label="Projektliste">
+            <article class="projekt" data-tech="iot">
+              <h3><a href="#" aria-label="IoT Projekt ansehen">IoT Projekt</a></h3>
+              <p>
+                Sensorwerte erfassen, verarbeiten und übertragen. Fokus auf
+                robuste Kommunikation und saubere Struktur.
+              </p>
+              <ul class="mini">
+                <li>Features: Messwerte, Status, einfache Fehlerfälle</li>
+                <li>Tech: Mikrocontroller, Sensorik, C oder C++</li>
+              </ul>
+            </article>
+
+            <article class="projekt" data-tech="embedded">
+              <h3>
+                <a href="#" aria-label="Embedded Systems Projekt ansehen"
+                  >Embedded Systems Projekt</a
+                >
+              </h3>
+              <p>
+                Hardwarenahe Anwendung mit klar definiertem Timing. Fokus auf
+                Interrupts, Timer und Zustandsmaschine.
+              </p>
+              <ul class="mini">
+                <li>Fokus: Echtzeitnahes Verhalten und Debugging</li>
+                <li>Tech: C, Toolchain, Git</li>
+              </ul>
+            </article>
+
+            <article class="projekt" data-tech="hardware">
+              <h3>
+                <a href="#" aria-label="Temperatursensor und Bus Projekt ansehen"
+                  >Temperatursensor & Bus-Kommunikation</a
+                >
+              </h3>
+              <p>
+                Temperaturdaten erfassen und zwischen Knoten austauschen. Fokus
+                auf Nachrichtenformat und nachvollziehbares Logging.
+              </p>
+              <ul class="mini">
+                <li>Fokus: Protokoll, Payload, Fehlerszenarien</li>
+                <li>Tech: Embedded C, Schnittstellen, Debugging</li>
+              </ul>
+            </article>
           </div>
-          <div class="projekt" data-tech="embedded_systems_projekt">
-            <h3><a href="#">Embedded Systems Projekt</a></h3>
-            <p>Mikrocontrollerprojekt in C mit Echtzeitverhalten.</p>
-          </div>
-          <div class="projekt" data-tech="hardware">
-            <h3><a href="#">Temperatursensor & CAN</a></h3>
-            <p>Sensorintegration und CAN-Kommunikation zwischen MCUs.</p>
-          </div>
-        </div>
+        </section>
       </section>
     </main>
 
-    <!-- FOOTER mit zentriertem Button -->
     <footer class="footer">
-      <a href="kontakt.html" class="kontakt-button">📫 Kontakt aufnehmen</a>
+      <div class="footer-inner">
+        <a href="kontakt.html" class="kontakt-button">📫 Kontakt</a>
+        <a
+          href="https://www.linkedin.com/in/marcel-ric/"
+          class="kontakt-button"
+          target="_blank"
+          rel="noopener"
+          >💼 LinkedIn</a
+        >
+      </div>
     </footer>
 
     <!-- JS & AOS -->
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
     <script>
-      AOS.init({ duration: 1000, once: true });
+      AOS.init({ duration: 900, once: true });
     </script>
 
     <script src="script.js"></script>
