--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <!-- Hero Section -->
   <section class="hero-section">
-    <div class="hero-content" data-aos="fade-up">
+    <div class="hero-content glass" data-aos="fade-up">
       <img 
         src="assets/profilbild.jpg" 
         srcset="assets/profilbild.jpg 1x, assets/profilbild@2x.jpg 2x"
