Add CV preview section to portfolio and include downloadable CV

--- a/index.html
+++ b/index.html
@@ -147,6 +147,50 @@
         </article>
       </div>
     </section>
+
+    <!-- CV Preview Section -->
+    <section id="cv-preview" data-aos="fade-up">
+      <h2 data-i18n="cvPreviewTitle">📄 Lebenslauf</h2>
+      
+      <div class="cv-preview-grid">
+        <!-- Education -->
+        <div class="cv-preview-card glass">
+          <h3 data-i18n="cvEducationTitle">🎓 Ausbildung</h3>
+          <div class="cv-preview-item">
+            <h4 data-i18n="cvEducationDegree">Bachelor of Science, Angewandte Informatik</h4>
+            <p class="cv-preview-detail" data-i18n="cvEducationSchool">HTWG Konstanz</p>
+            <p class="cv-preview-detail" data-i18n="cvEducationFocus">Schwerpunkt: Embedded Systems</p>
+          </div>
+        </div>
+
+        <!-- Experience -->
+        <div class="cv-preview-card glass">
+          <h3 data-i18n="cvExperienceTitle">💼 Praxiserfahrung</h3>
+          <div class="cv-preview-item">
+            <p data-i18n="cvExperiencePreview">Praxissemester und berufliche Stationen</p>
+          </div>
+        </div>
+
+        <!-- Technical Skills -->
+        <div class="cv-preview-card glass cv-skills-card">
+          <h3 data-i18n="cvSkillsTitle">🛠️ Technische Skills</h3>
+          <div class="badges">
+            <span class="badge">C</span>
+            <span class="badge">C++</span>
+            <span class="badge">Python</span>
+            <span class="badge">VHDL (Grundlagen)</span>
+            <span class="badge">Embedded Linux</span>
+            <span class="badge">Git</span>
+            <span class="badge">VS Code</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="cv-cta">
+        <a href="cv.html" class="btn btn-primary" data-i18n="cvViewFull">📄 Vollständigen Lebenslauf ansehen</a>
+        <a href="assets/CV_Marcel_Richter.pdf" class="btn btn-secondary" download data-i18n="cvDownload">📥 CV als PDF herunterladen</a>
+      </div>
+    </section>
   </main>
 
   <!-- Footer -->
