Enhance CV section with detailed descriptions and improve glassmorphism effects in styling

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
             <h4 data-i18n="cvEducationDegree">Bachelor of Science, Angewandte Informatik</h4>
             <p class="cv-preview-detail" data-i18n="cvEducationSchool">HTWG Konstanz</p>
             <p class="cv-preview-detail" data-i18n="cvEducationFocus">Schwerpunkt: Embedded Systems</p>
+            <p class="cv-preview-description" data-i18n="cvEducationDescription">Ich studiere Angewandte Informatik an der HTWG Konstanz mit Fokus auf Embedded Systems. Im Studium beschäftige ich mich mit hardwarenaher Programmierung, Mikroprozessortechnik, digitalen Systemen und Embedded Linux.</p>
           </div>
         </div>
 
@@ -167,7 +168,7 @@
         <div class="cv-preview-card glass">
           <h3 data-i18n="cvExperienceTitle">💼 Praxiserfahrung</h3>
           <div class="cv-preview-item">
-            <p data-i18n="cvExperiencePreview">Praxissemester und berufliche Stationen</p>
+            <p class="cv-preview-description" data-i18n="cvExperienceDescription">Hier kannst du dein Praxissemester, Werkstudententätigkeiten oder andere berufliche Erfahrungen eintragen. Beschreibe kurz deine Aufgaben, verwendete Technologien und was du dabei gelernt hast.</p>
           </div>
         </div>
 
@@ -182,6 +183,8 @@
             <span class="badge">Embedded Linux</span>
             <span class="badge">Git</span>
             <span class="badge">VS Code</span>
+            <span class="badge">Debugging</span>
+            <span class="badge">Mikrocontroller</span>
           </div>
         </div>
       </div>
