Add translations for IoT, Embedded, and CAN projects in script.js and update project details in HTML files

--- a/cv.html
+++ b/cv.html
@@ -43,7 +43,7 @@
           <h3 data-i18n="cvEducationDegree">Bachelor of Science, Angewandte Informatik</h3>
           <p data-i18n="cvEducationSchool">HTWG Konstanz</p>
           <p data-i18n="cvEducationFocus">Schwerpunkt: Embedded Systems</p>
-          <p>Ich studiere Angewandte Informatik an der HTWG Konstanz mit Fokus auf Embedded Systems. Im Studium beschäftige ich mich mit hardwarenaher Programmierung, Mikroprozessortechnik, digitalen Systemen und Embedded Linux.</p>
+          <p data-i18n="cvEducationDescription">Ich studiere Angewandte Informatik an der HTWG Konstanz mit Fokus auf Embedded Systems. Im Studium beschäftige ich mich mit hardwarenaher Programmierung, Mikroprozessortechnik, digitalen Systemen und Embedded Linux.</p>
         </div>
       </section>
 
@@ -52,7 +52,7 @@
         <h2 data-i18n="cvExperienceTitle">💼 Praxiserfahrung</h2>
         <div class="cv-item">
           <p data-i18n="cvExperiencePlaceholder">Praxissemester und berufliche Stationen (Platzhalter für eigene Inhalte)</p>
-          <p>Hier kannst du dein Praxissemester, Werkstudententätigkeiten oder andere berufliche Erfahrungen eintragen. Beschreibe kurz deine Aufgaben, verwendete Technologien und was du dabei gelernt hast.</p>
+          <p data-i18n="cvExperienceDescription">Hier kannst du dein Praxissemester, Werkstudententätigkeiten oder andere berufliche Erfahrungen eintragen. Beschreibe kurz deine Aufgaben, verwendete Technologien und was du dabei gelernt hast.</p>
         </div>
       </section>
 
