--- a/projekt-can.html
+++ b/projekt-can.html
@@ -36,23 +36,23 @@
     <article class="project-detail" data-aos="fade-up">
       <!-- Project Header -->
       <header class="project-header">
-        <h1>CAN Bus Kommunikation</h1>
-        <p class="project-oneliner">Temperaturdaten erfassen und zwischen Knoten austauschen. Fokus auf Nachrichtenformat und nachvollziehbares Logging.</p>
+        <h1 data-i18n="projectCANTitle">CAN Bus Kommunikation</h1>
+        <p class="project-oneliner" data-i18n="projectCANSummary">Temperaturdaten erfassen und zwischen Knoten austauschen. Fokus auf Nachrichtenformat und nachvollziehbares Logging.</p>
       </header>
 
       <!-- Ziel -->
       <section class="project-section">
         <h2 data-i18n="projectGoalTitle">🎯 Ziel</h2>
-        <p>Das Projekt beschäftigt sich mit der Erfassung von Temperaturdaten und deren Austausch zwischen mehreren Knoten über einen CAN-Bus. Der Fokus liegt auf einem strukturierten Nachrichtenformat, nachvollziehbarem Logging und sicherer Fehlerbehandlung bei Kommunikationsproblemen.</p>
+        <p data-i18n="projectCANGoal">Das Projekt beschäftigt sich mit der Erfassung von Temperaturdaten und deren Austausch zwischen mehreren Knoten über einen CAN-Bus. Der Fokus liegt auf einem strukturierten Nachrichtenformat, nachvollziehbarem Logging und sicherer Fehlerbehandlung bei Kommunikationsproblemen.</p>
       </section>
 
       <!-- Mein Beitrag -->
       <section class="project-section">
         <h2 data-i18n="projectContributionTitle">🔧 Mein Beitrag</h2>
         <ul>
-          <li>Definition eines strukturierten Nachrichtenformats für Sensordaten</li>
-          <li>Implementierung der CAN-Schnittstelle und Fehlerbehandlung</li>
-          <li>Logging-Mechanismus zur Nachvollziehbarkeit von Nachrichten und Fehlern</li>
+          <li data-i18n="projectCANContrib1">Definition eines strukturierten Nachrichtenformats für Sensordaten</li>
+          <li data-i18n="projectCANContrib2">Implementierung der CAN-Schnittstelle und Fehlerbehandlung</li>
+          <li data-i18n="projectCANContrib3">Logging-Mechanismus zur Nachvollziehbarkeit von Nachrichten und Fehlern</li>
         </ul>
       </section>
 
@@ -72,7 +72,7 @@
       <!-- Umsetzung -->
       <section class="project-section">
         <h2 data-i18n="projectImplementationTitle">⚙️ Umsetzung</h2>
-        <p>Die Umsetzung begann mit der Definition des Nachrichtenformats. Es wurde ein einfaches Protokoll definiert, das Sensor-ID, Temperaturwert und Checksumme enthält. Die CAN-Schnittstelle wurde konfiguriert und ein Empfangs- und Sendemechanismus implementiert. Besonderes Augenmerk wurde auf Fehlerszenarien wie verlorene Nachrichten und falsche Checksummen gelegt. Ein Logging-System protokolliert alle Nachrichten und Fehler für spätere Analyse.</p>
+        <p data-i18n="projectCANImplementation">Die Umsetzung begann mit der Definition des Nachrichtenformats. Es wurde ein einfaches Protokoll definiert, das Sensor-ID, Temperaturwert und Checksumme enthält. Die CAN-Schnittstelle wurde konfiguriert und ein Empfangs- und Sendemechanismus implementiert. Besonderes Augenmerk wurde auf Fehlerszenarien wie verlorene Nachrichten und falsche Checksummen gelegt. Ein Logging-System protokolliert alle Nachrichten und Fehler für spätere Analyse.</p>
       </section>
 
       <!-- Screenshots -->
@@ -87,8 +87,8 @@
       <section class="project-section">
         <h2 data-i18n="projectLessonsTitle">📚 Lessons Learned</h2>
         <ul>
-          <li>Strukturierte Nachrichtenformate erleichtern Debugging und Wartung.</li>
-          <li>Logging ist unverzichtbar für die Analyse von Kommunikationsproblemen.</li>
+          <li data-i18n="projectCANLesson1">Strukturierte Nachrichtenformate erleichtern Debugging und Wartung.</li>
+          <li data-i18n="projectCANLesson2">Logging ist unverzichtbar für die Analyse von Kommunikationsproblemen.</li>
         </ul>
       </section>
 
