--- a/projekt-embedded.html
+++ b/projekt-embedded.html
@@ -36,23 +36,23 @@
     <article class="project-detail" data-aos="fade-up">
       <!-- Project Header -->
       <header class="project-header">
-        <h1>Embedded Systems Projekt</h1>
-        <p class="project-oneliner">Hardwarenahe Anwendung mit definiertem Timing. Fokus auf Interrupts, Timer und Zustandsmaschinen.</p>
+        <h1 data-i18n="projectEmbeddedTitle">Embedded Systems Projekt</h1>
+        <p class="project-oneliner" data-i18n="projectEmbeddedSummary">Hardwarenahe Anwendung mit definiertem Timing. Fokus auf Interrupts, Timer und Zustandsmaschinen.</p>
       </header>
 
       <!-- Ziel -->
       <section class="project-section">
         <h2 data-i18n="projectGoalTitle">🎯 Ziel</h2>
-        <p>Entwicklung einer hardwarenahen Anwendung mit präzisem Timing. Das Projekt soll Interrupts, Timer und eine Zustandsmaschine nutzen, um echtzeitnahes Verhalten zu erreichen. Der Fokus liegt auf nachvollziehbarer Struktur und systematischem Debugging.</p>
+        <p data-i18n="projectEmbeddedGoal">Entwicklung einer hardwarenahen Anwendung mit präzisem Timing. Das Projekt soll Interrupts, Timer und eine Zustandsmaschine nutzen, um echtzeitnahes Verhalten zu erreichen. Der Fokus liegt auf nachvollziehbarer Struktur und systematischem Debugging.</p>
       </section>
 
       <!-- Mein Beitrag -->
       <section class="project-section">
         <h2 data-i18n="projectContributionTitle">🔧 Mein Beitrag</h2>
         <ul>
-          <li>Design und Implementierung einer ereignisgesteuerten Zustandsmaschine</li>
-          <li>Konfiguration von Interrupts und Hardware-Timern</li>
-          <li>Systematisches Debugging mit Oszilloskop und Logausgaben</li>
+          <li data-i18n="projectEmbeddedContrib1">Design und Implementierung einer ereignisgesteuerten Zustandsmaschine</li>
+          <li data-i18n="projectEmbeddedContrib2">Konfiguration von Interrupts und Hardware-Timern</li>
+          <li data-i18n="projectEmbeddedContrib3">Systematisches Debugging mit Oszilloskop und Logausgaben</li>
         </ul>
       </section>
 
@@ -72,7 +72,7 @@
       <!-- Umsetzung -->
       <section class="project-section">
         <h2 data-i18n="projectImplementationTitle">⚙️ Umsetzung</h2>
-        <p>Die Umsetzung begann mit der Definition der Zustandsmaschine und der benötigten Events. Anschließend wurden die Hardware-Timer konfiguriert und Interrupt-Handler implementiert. Besonderes Augenmerk wurde auf minimale Interrupt-Laufzeiten und sichere Datenübergabe zwischen Interrupt- und Hauptkontext gelegt. Das Debugging erfolgte durch gezielte Logausgaben und Messungen mit dem Oszilloskop.</p>
+        <p data-i18n="projectEmbeddedImplementation">Die Umsetzung begann mit der Definition der Zustandsmaschine und der benötigten Events. Anschließend wurden die Hardware-Timer konfiguriert und Interrupt-Handler implementiert. Besonderes Augenmerk wurde auf minimale Interrupt-Laufzeiten und sichere Datenübergabe zwischen Interrupt- und Hauptkontext gelegt. Das Debugging erfolgte durch gezielte Logausgaben und Messungen mit dem Oszilloskop.</p>
       </section>
 
       <!-- Screenshots -->
@@ -87,8 +87,8 @@
       <section class="project-section">
         <h2 data-i18n="projectLessonsTitle">📚 Lessons Learned</h2>
         <ul>
-          <li>Klare Trennung zwischen Interrupt- und Hauptkontext ist essentiell.</li>
-          <li>Zustandsmaschinen machen komplexe Abläufe nachvollziehbar und testbar.</li>
+          <li data-i18n="projectEmbeddedLesson1">Klare Trennung zwischen Interrupt- und Hauptkontext ist essentiell.</li>
+          <li data-i18n="projectEmbeddedLesson2">Zustandsmaschinen machen komplexe Abläufe nachvollziehbar und testbar.</li>
         </ul>
       </section>
 
