--- a/projekt-iot.html
+++ b/projekt-iot.html
@@ -36,23 +36,23 @@
     <article class="project-detail" data-aos="fade-up">
       <!-- Project Header -->
       <header class="project-header">
-        <h1>IoT Sensor Projekt</h1>
-        <p class="project-oneliner">Sensorwerte erfassen, verarbeiten und übertragen. Fokus auf robuste Kommunikation und strukturierten Code.</p>
+        <h1 data-i18n="projectIoTTitle">IoT Sensor Projekt</h1>
+        <p class="project-oneliner" data-i18n="projectIoTSummary">Sensorwerte erfassen, verarbeiten und übertragen. Fokus auf robuste Kommunikation und strukturierten Code.</p>
       </header>
 
       <!-- Ziel -->
       <section class="project-section">
         <h2 data-i18n="projectGoalTitle">🎯 Ziel</h2>
-        <p>Das Projekt befasst sich mit der Erfassung von Sensordaten, ihrer Verarbeitung und Übertragung. Der Fokus liegt auf einer robusten Kommunikation und einer sauberen, wartbaren Code-Struktur. Das System soll Messwerte zuverlässig erfassen und Status-Informationen bereitstellen, auch bei einfachen Fehlerszenarien.</p>
+        <p data-i18n="projectIoTGoal">Das Projekt befasst sich mit der Erfassung von Sensordaten, ihrer Verarbeitung und Übertragung. Der Fokus liegt auf einer robusten Kommunikation und einer sauberen, wartbaren Code-Struktur. Das System soll Messwerte zuverlässig erfassen und Status-Informationen bereitstellen, auch bei einfachen Fehlerszenarien.</p>
       </section>
 
       <!-- Mein Beitrag -->
       <section class="project-section">
         <h2 data-i18n="projectContributionTitle">🔧 Mein Beitrag</h2>
         <ul>
-          <li>Implementierung der Sensor-Schnittstelle und Datenerfassung</li>
-          <li>Entwicklung eines Protokolls zur strukturierten Datenübertragung</li>
-          <li>Fehlerbehandlung bei Sensor-Ausfällen und Kommunikationsfehlern</li>
+          <li data-i18n="projectIoTContrib1">Implementierung der Sensor-Schnittstelle und Datenerfassung</li>
+          <li data-i18n="projectIoTContrib2">Entwicklung eines Protokolls zur strukturierten Datenübertragung</li>
+          <li data-i18n="projectIoTContrib3">Fehlerbehandlung bei Sensor-Ausfällen und Kommunikationsfehlern</li>
         </ul>
       </section>
 
@@ -71,7 +71,7 @@
       <!-- Umsetzung -->
       <section class="project-section">
         <h2 data-i18n="projectImplementationTitle">⚙️ Umsetzung</h2>
-        <p>Die Umsetzung erfolgte in mehreren Schritten. Zunächst wurde der Sensor angebunden und die Datenerfassung implementiert. Anschließend wurde ein einfaches Protokoll definiert, um die Daten strukturiert zu übertragen. Die Fehlerbehandlung umfasst Timeouts, Checksummen und defensive Programmierung. Der Code wurde modular aufgebaut, um Wartbarkeit und Erweiterbarkeit zu gewährleisten.</p>
+        <p data-i18n="projectIoTImplementation">Die Umsetzung erfolgte in mehreren Schritten. Zunächst wurde der Sensor angebunden und die Datenerfassung implementiert. Anschließend wurde ein einfaches Protokoll definiert, um die Daten strukturiert zu übertragen. Die Fehlerbehandlung umfasst Timeouts, Checksummen und defensive Programmierung. Der Code wurde modular aufgebaut, um Wartbarkeit und Erweiterbarkeit zu gewährleisten.</p>
       </section>
 
       <!-- Screenshots -->
@@ -86,8 +86,8 @@
       <section class="project-section">
         <h2 data-i18n="projectLessonsTitle">📚 Lessons Learned</h2>
         <ul>
-          <li>Defensive Programmierung bei hardwarenaher Entwicklung zahlt sich aus.</li>
-          <li>Strukturierte Fehlerbehandlung erleichtert das Debugging erheblich.</li>
+          <li data-i18n="projectIoTLesson1">Defensive Programmierung bei hardwarenaher Entwicklung zahlt sich aus.</li>
+          <li data-i18n="projectIoTLesson2">Strukturierte Fehlerbehandlung erleichtert das Debugging erheblich.</li>
         </ul>
       </section>
 
